# strategy

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
include/: ball.hpp  goals.hpp  robot.hpp  state_estimator.hpp  strategy.hpp  trajectory_controller.hpp
include/keyboard/: keyboard_input.sublime-workspace
include/players/: assistent_player.hpp  goalkeeper.hpp  goalkeeper_kicker.hpp  initial_goalkeeper.hpp  kicker_player.hpp  player.hpp  regular_player.hpp
include/potential_fields/: attractive_potential_field.hpp  null_potential_field.hpp  parallel_potential_field.hpp  perpendicular_potential_field.hpp  potential_field.hpp  repulsive_potential_field.hpp  selective_potential_field.hpp  tangential_potential_field.hpp
include/utils/: math.hpp
msg/: strategy_output_msg.msg
new_arch/: GoalkeeperPlayer.py  KickerPlayer.py  abstract_strategy.py  arch_strategy.py  ball.py  circumvent_ball.py  control_options.py  field_side.py  go_to_ball.py  go_to_goal.py  go_to_position.py  goalkeeper.py  keyboard_event.py  keyboard_publisher.py  olympic_lap.py  player.py  point.py  robots_position.py  strategy_node.py  team.py
new_arch/Players/: GoalkeeperCircPlayer.py  GoalkeeperLinePlayer.py  GoalkeeperPlayer.py  KickerPlayer.py  SimpleKicker.py  SquareKicker.py  TestPlayer.py  TestPlayer2.py  example_player.py  player.py
new_arch/behaviours/: SquareCircumventBehaviour.py  abstract_strategy.py  circumvent_ball.py  control_test.py  example_strategy.py  go_to_ball.py  go_to_ball2.py  go_to_position.py  goalkeeper.py  goalkeeper_line.py  look_to_target.py  teste_controle.py
simple_strategy/: 3_pts_pose_str.py  3_pts_str.py  circle.py  defender.py  go_to_ball.py  goalkeeper.py  kicker.py  player.py  potential_fields.py  relative_position_converter.py  strategy.py  strategy_complete.py  strategy_potential.py  test_attractive_potential.py  test_selective_field.py  test_tangential_potential.py
src/: ball.cpp  goals.cpp  robot.cpp  state_estimator.cpp  strategy.cpp  strategy_node.cpp  trajectory_controller.cpp
src/keyboard/: keyboard_input.cpp  keyboard_input.sublime-project  keyboard_input.sublime-workspace  keyboard_node.cpp
src/players/: assistent_player.cpp  goalkeeper.cpp  goalkeeper_kicker.cpp  initial_goalkeeper.cpp  kicker_player.cpp  player.cpp  regular_player.cpp
src/potential_fields/: attractive_potential_field.cpp  null_potential_field.cpp  parallel_potential_field.cpp  perpendicular_potential_field.cpp  repulsive_potential_field.cpp  selective_potential_field.cpp  tangential_potential_field.cpp
src/utils/: math.cpp  point.cpp  vector.cpp
strategy_general/: 3_pts_pose.py  3_pts_pose_position.py  3_pts_position.py  go_to_ball.py  goalkeeper.py  goalkeeper_sm.py  start_strategy.py
